# smartag_datacollection

./: README.md  launch.sh  launch_auto.sh  launch_bag.sh  launch_nobag.sh  viz_terrain.rviz
beemapping/: CMakeLists.txt  package.xml
beemapping/launch/: beemapping.launch  gmapping_demo.launch  move_base.launch
hardwarelaunch/: CMakeLists.txt  package.xml
hardwarelaunch/config/: control.yaml  twist_mux.yaml  zed_camera.launch.xml
hardwarelaunch/launch/: VelodyneEdit.launch  control.launch  controller.launch  description.launch  gps.launch  map.launch  nano.save  nav.launch  nodelet_manager.launch  oem7gps.launch  teleop.launch  velodyne.launch  zed2i.launch
hardwarelaunch/meshes/: velodyne_hdl32_base.dae  velodyne_hdl32_top.dae  wvu_arch.dae
hardwarelaunch/urdf/: bramblebee.urdf.xacro  bramblebee_description.urdf.xacro  bramblebee_wheel.urdf.xacro  combined.urdf.xacro  velodyne_hdl32e.urdf.xacro
husky_bringup/: README.md
hw_interface/: package.xml
hw_interface/launch/: hw_interface_plugins.launch
hw_interface/src/: base_interface.cpp  base_serial_interface.cpp  hw_interface_node.cpp
hw_interface_plugins/hw_interface_plugin_novatel_span/: CMakeLists.txt  novatel_span_plugin.xml  package.xml
smartagurdf/: CMakeLists.txt  package.xml
smartagurdf/config/: joint_names_smartagurdf.yaml
smartagurdf/launch/: display.launch  displayOLD.launch  gazebo.launch
smartagurdf/meshes/: front_left_wheel_link.STL  front_right_wheel_link.STL  gps_antenna_link.STL  lidar_link.STL  realsense_link.STL  rear_left_wheel_link.STL  rear_right_wheel_link.STL  (+1 more)
(+16 files in other folders)
