<?xml version="1.0"?>
<package format="2">
  <name>hardwarelaunch</name>
  <version>1.0.0</version>
  <description>Launches Husky base sensors and starts SLAM</description>

  <maintainer email="ads00024@mix.wvu.edu">Andrew Sarver</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
